fix(global): various fixes (#311)
* fix(teams): fix blurry statistics

* fix(global): english text in english font on ch

* fix(global): english text in english font on ch

* fix(sub-menu): fallback subtitles for articles

--- a/src/assets/styles/includes/reset.css
+++ b/src/assets/styles/includes/reset.css
@@ -8,6 +8,8 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
   min-width: 320px;
 
