--- a/src/content-modules/global/section-title/section-title.module.css
+++ b/src/content-modules/global/section-title/section-title.module.css
@@ -46,6 +46,10 @@
   @media (--bp-lg) {
     width: 70px;
   }
+
+  :global(.wrapper_isChinese) & {
+    @mixin font-family font-serif-light, false;
+  }
 }
 
 .title {
